# test_submodule_publish

./: .gitmodules  Cargo.toml
.github/workflows/: release.yml
scripts/: git-archive-all.sh
