[package]
repository = "https://github.com/rob-p/test_submodule_publish"
name = "test_submodule_publish"
version = "0.3.0"
edition = "2021"

[dependencies]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.18.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = true
# Generate and dist a source tarball
source-tarball = false

[[workspace.metadata.dist.extra-artifacts]]
artifacts = ["source.tar.gz"]
build = ["bash", "scripts/git-archive-all.sh", "--format", "tar.gz", "--prefix", "test_submodule_publish/", "source.tar.gz"]

[workspace.metadata.dist.dependencies.homebrew]
gnu-tar = { stage = ["build"] }
coreutils = { stage = ["build"] }
